import {
    FILE_NAME,
    FILE_URL,
    matchRepositorySnapshot,
    mockAuthenticatedStartup,
    mockContext,
    mockSaveProgramRequest,
    mockUserInfoForUnauthorized,
} from '../common.ts';
import {
    CompileSuccessResult,
    LabkeeperFile,
    TextOutputSegment,
} from '../../../model/domain.ts';
import { InMemoryProgramRepository } from '../../../model/repository/ProgramRepository.ts';
import { ProgramService } from '../../../model/service/ProgramService.ts';

/*
Сценарий:
1. Зашли как авторизованный юзер
2. Создали comp
3. Создали md
4. написали в них текст
5. скрыли вычислительный сегмент
6. выполнили
7. поменяли местами первый и второй
8. вставили сегмент после первого
 */
test('double-md-test', async () => {
    const {
        startupService,
        projectPageService,
        rpi,
        repository,
        programEditorService,
    } = mockContext();
    mockUserInfoForUnauthorized(rpi);

    rpi.compilationRequest = jest.fn().mockResolvedValue({
        code: 200,
        body: {
            segments: [
                { type: 'empty' },
                { type: 'md', text: 'my md' } as TextOutputSegment,
            ],
        } as CompileSuccessResult,
        isOk: true,
        isUnauth: false,
        isForbidden: false,
    });

    await startupService.onAppStartup();

    await projectPageService.setProjectType('markdown');
    programEditorService.onAddSegmentClicked('computational');
    programEditorService.onAddSegmentClicked('md');

    await programEditorService.onSegmentTextEdited(0, 'a = 10');
    await programEditorService.onSegmentTextEdited(1, 'my md');

    await programEditorService.segmentEditorChangeSegmentVisibility(
        false,
        'visible',
        0
    );

    await projectPageService.onRunButtonClicked();

    await programEditorService.segmentEditorChangeSegmentPosition('up', 1);

    matchRepositorySnapshot(repository);

    await programEditorService.onSegmentAddedViaDivider('md', 0);

    matchRepositorySnapshot(repository);
});

test('delete-files-modal-popup-when-delete-segment', async () => {
    const { startupService, rpi, repository, programEditorService } =
        mockContext();
    mockAuthenticatedStartup(rpi);
    mockSaveProgramRequest(rpi);

    await startupService.onAppStartup();

    programEditorService.onAddSegmentClicked('md');

    await programEditorService.onSegmentTextEdited(
        0,
        `
    ![image](${FILE_URL})
    `
    );
    await programEditorService.onBlurSegment(0);

    await programEditorService.deleteSegment(0);

    expect(
        repository.settingsViewModelRepository.filesToDelete()
    ).toStrictEqual([
        {
            url: FILE_URL,
            fileName: FILE_NAME,
            autogenerated: false,
        } as LabkeeperFile,
    ]);
});

test('delete-files-modal-popup-when-delete-edit-segment', async () => {
    const { startupService, rpi, repository, programEditorService } =
        mockContext();
    mockAuthenticatedStartup(rpi);
    mockSaveProgramRequest(rpi);

    await startupService.onAppStartup();

    programEditorService.onAddSegmentClicked('md');
    await programEditorService.onSegmentTextEdited(
        0,
        `
    ![image](${FILE_URL})
    `
    );
    await programEditorService.onSegmentTextEdited(0, '');

    expect(
        repository.settingsViewModelRepository.filesToDelete()
    ).toStrictEqual([
        {
            url: FILE_URL,
            fileName: FILE_NAME,
            autogenerated: false,
        } as LabkeeperFile,
    ]);
});

// ---------------------------------------------------------------------------
// ProgramService: курсор после undo
// ---------------------------------------------------------------------------

function makeProgramService() {
    const repo = new InMemoryProgramRepository();
    const svc = new ProgramService(repo);
    return svc;
}

test('undo: cursorHeadBeforeEdit сохраняется и возвращается при undo', () => {
    const svc = makeProgramService();
    svc.addSegmentToLastPosition('computational');

    // Первая правка: курсор стоит в позиции 5 после ввода
    svc.changeSegmentTextByPositionIndex(0, 'hello', 5);
    // Вторая правка (gap): курсор в позиции 11
    svc.gap();
    svc.changeSegmentTextByPositionIndex(0, 'hello world', 11);

    const hint = svc.undo();

    // После undo текст должен вернуться к 'hello'
    expect(svc.getCurrentProgram().segments[0].text).toBe('hello');
    // Курсор должен быть сохранён именно в точке, где он был до второй группы правок
    expect(hint?.cursorOffset).toBe(5);
});

test('undo: cursorHeadBeforeEdit используется точнее эвристики для mid-text правок', () => {
    const svc = makeProgramService();
    svc.addSegmentToLastPosition('computational');

    // Набираем длинный текст, курсор в середине (позиция 10)
    const longText = 'abcde12345fghij';
    svc.changeSegmentTextByPositionIndex(0, longText, 10);
    svc.gap();

    // Вставляем в середину слово, курсор на позиции 13
    const editedText = 'abcde12345XXXfghij';
    svc.changeSegmentTextByPositionIndex(0, editedText, 13);

    const hint = svc.undo();

    expect(svc.getCurrentProgram().segments[0].text).toBe(longText);
    // cursorHeadBeforeEdit = 10 (позиция до правки), а не эвристика
    expect(hint?.cursorOffset).toBe(10);
});

test('undo/redo: redo возвращает cursorHeadAfterEdit', () => {
    const svc = makeProgramService();
    svc.addSegmentToLastPosition('computational');

    svc.changeSegmentTextByPositionIndex(0, 'hello', 5);
    svc.gap();
    svc.changeSegmentTextByPositionIndex(0, 'hello world', 11);

    svc.undo(); // откатываем до 'hello'
    const redoHint = svc.redo(); // снова 'hello world'

    expect(svc.getCurrentProgram().segments[0].text).toBe('hello world');
    expect(redoHint?.cursorOffset).toBe(11);
});

test('undo: без cursorHeadBeforeEdit используется эвристика (fallback)', () => {
    const svc = makeProgramService();
    svc.addSegmentToLastPosition('computational');

    // Используем changeSegmentTextByPositionIndex без cursorHead —
    // cursorHeadBeforeEdit не будет задан для первой action (нет prevAction)
    // но cursorHeadAfterEdit будет = длина строки
    svc.changeSegmentTextByPositionIndex(0, 'abc');
    svc.gap();
    svc.changeSegmentTextByPositionIndex(0, 'abcdef');

    const hint = svc.undo();

    expect(svc.getCurrentProgram().segments[0].text).toBe('abc');
    // cursorHeadBeforeEdit = длина 'abc' (3), сохранена из prevAction.cursorHeadAfterEdit
    expect(hint?.cursorOffset).toBeLessThanOrEqual(3);
    expect(hint?.cursorOffset).toBeGreaterThanOrEqual(0);
});

test('undo нескольких накопленных правок в одном сегменте', () => {
    const svc = makeProgramService();
    svc.addSegmentToLastPosition('md');

    // Накапливаем правки внутри одного «кванта» (без gap)
    svc.changeSegmentTextByPositionIndex(0, 'a', 1);
    svc.changeSegmentTextByPositionIndex(0, 'ab', 2);
    svc.changeSegmentTextByPositionIndex(0, 'abc', 3);

    const hint = svc.undo();

    // Все три правки накоплены в одну action — undo даёт пустую строку
    expect(svc.getCurrentProgram().segments[0].text).toBe('');
    expect(hint?.segmentIndex).toBe(0);
});

test('pendingSegmentEditorCursor: onPrevVersionButtonClicked устанавливает курсор-hint', () => {
    const { programEditorService, repository } = mockContext();

    // Добавляем сегмент напрямую через programService
    programEditorService['programService'].addSegmentToLastPosition('md');
    programEditorService['programService'].changeSegmentTextByPositionIndex(
        0,
        'hello world',
        11
    );
    programEditorService['programService'].gap();
    programEditorService['programService'].changeSegmentTextByPositionIndex(
        0,
        'hello world edited',
        18
    );

    programEditorService.onPrevVersionButtonClicked();

    const pending =
        repository.ideViewModelRepository.pendingSegmentEditorCursor();
    expect(pending).not.toBeNull();
    expect(pending?.segmentIndex).toBe(0);
    // Курсор должен быть в диапазоне длины восстановленного текста
    expect(pending?.offset).toBeGreaterThanOrEqual(0);
    expect(pending?.offset).toBeLessThanOrEqual('hello world'.length);
});

test('canUndo/canRedo корректны после серии операций', () => {
    const svc = makeProgramService();
    // addSegmentToLastPosition записывает AddSegmentAction в историю —
    // canUndo() становится true уже после добавления сегмента.
    expect(svc.canUndo()).toBe(false);
    expect(svc.canRedo()).toBe(false);

    svc.addSegmentToLastPosition('md');
    expect(svc.canUndo()).toBe(true);
    expect(svc.canRedo()).toBe(false);

    // Правка текста добавляет ещё одну action
    svc.changeSegmentTextByPositionIndex(0, 'text', 4);
    expect(svc.canUndo()).toBe(true);

    // Первый undo откатывает TextChanged
    svc.undo();
    expect(svc.canUndo()).toBe(true); // AddSegmentAction ещё в истории
    expect(svc.canRedo()).toBe(true);

    // Redo возвращает TextChanged
    svc.redo();
    expect(svc.canUndo()).toBe(true);
    expect(svc.canRedo()).toBe(false);

    // Очищаем историю и проверяем начальное состояние
    svc.clearHistory();
    expect(svc.canUndo()).toBe(false);
    expect(svc.canRedo()).toBe(false);
});
