// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`double-md-test 1`] = `
MockViewModelRepositoryState {
  "activeEditorLine": null,
  "activeSegmentIndex": 1,
  "captchaBypassToken": undefined,
  "cloneRequestState": "unknown",
  "codeCheckRequest": "unknown",
  "compileErrorResult": {
    "errors": [],
  },
  "compileSuccessResult": {
    "segments": [
      {
        "text": "my md",
        "type": "md",
      },
      {
        "type": "empty",
      },
    ],
  },
  "currentEmail": null,
  "currentProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "currentView": "closed",
  "editModeForFilename": false,
  "editModeForProjectTitle": false,
  "editorNavigationTarget": null,
  "email": "",
  "emailRequest": "unknown",
  "expandProblemViewer": false,
  "files": [],
  "filesToDelete": [],
  "getFilesRequestState": "unknown",
  "getProjectRequestState": "unknown",
  "getProjectsRequestState": "unknown",
  "id": 0,
  "instructionExpanded": false,
  "isAuthenticated": false,
  "isAutocompleteLoading": false,
  "isFileDraggedToManager": false,
  "isRegistration": false,
  "language": "ru",
  "lastOpenedProjectUuid": undefined,
  "lastProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "lastVerifiedCode": null,
  "location": "/project/default",
  "loginRequest": "unknown",
  "mode": "markdown",
  "passwordSetRequest": "unknown",
  "pdfClickPosition": null,
  "pdfNavigationTarget": null,
  "pdfUpdated": 0,
  "pendingSegmentEditorCursor": null,
  "previousActiveSegmentIndex": 0,
  "project": undefined,
  "projectIsReadonly": false,
  "projectPromptRequestState": "unknown",
  "projects": [],
  "redoEnabled": false,
  "saveProjectRequestState": "unknown",
  "search": undefined,
  "showFileManager": false,
  "showProjectPromptModal": false,
  "showSearch": false,
  "showShareModal": false,
  "showTour": false,
  "synctexEditorPosition": null,
  "toasts": [],
  "tokens": 0,
  "undoEnabled": true,
}
`;

exports[`double-md-test 2`] = `
MockViewModelRepositoryState {
  "activeEditorLine": null,
  "activeSegmentIndex": 1,
  "captchaBypassToken": undefined,
  "cloneRequestState": "unknown",
  "codeCheckRequest": "unknown",
  "compileErrorResult": {
    "errors": [],
  },
  "compileSuccessResult": {
    "segments": [
      {
        "text": "my md",
        "type": "md",
      },
      {
        "text": "",
        "type": "md",
      },
      {
        "type": "empty",
      },
    ],
  },
  "currentEmail": null,
  "currentProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": true,
        },
        "text": "",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "currentView": "closed",
  "editModeForFilename": false,
  "editModeForProjectTitle": false,
  "editorNavigationTarget": null,
  "email": "",
  "emailRequest": "unknown",
  "expandProblemViewer": false,
  "files": [],
  "filesToDelete": [],
  "getFilesRequestState": "unknown",
  "getProjectRequestState": "unknown",
  "getProjectsRequestState": "unknown",
  "id": 0,
  "instructionExpanded": false,
  "isAuthenticated": false,
  "isAutocompleteLoading": false,
  "isFileDraggedToManager": false,
  "isRegistration": false,
  "language": "ru",
  "lastOpenedProjectUuid": undefined,
  "lastProgram": {
    "parameters": {
      "roundStrategy": "firstMeaningDigit",
    },
    "segments": [
      {
        "parameters": {
          "visible": true,
        },
        "text": "my md",
        "type": "md",
      },
      {
        "parameters": {
          "visible": true,
        },
        "text": "",
        "type": "md",
      },
      {
        "parameters": {
          "visible": false,
        },
        "text": "a = 10",
        "type": "computational",
      },
    ],
  },
  "lastVerifiedCode": null,
  "location": "/project/default",
  "loginRequest": "unknown",
  "mode": "markdown",
  "passwordSetRequest": "unknown",
  "pdfClickPosition": null,
  "pdfNavigationTarget": null,
  "pdfUpdated": 0,
  "pendingSegmentEditorCursor": null,
  "previousActiveSegmentIndex": 1,
  "project": undefined,
  "projectIsReadonly": false,
  "projectPromptRequestState": "unknown",
  "projects": [],
  "redoEnabled": false,
  "saveProjectRequestState": "unknown",
  "search": undefined,
  "showFileManager": false,
  "showProjectPromptModal": false,
  "showSearch": false,
  "showShareModal": false,
  "showTour": false,
  "synctexEditorPosition": null,
  "toasts": [],
  "tokens": 0,
  "undoEnabled": true,
}
`;
